[gd_scene load_steps=2 format=3 uid="uid://dmqcrf7q1ulj7"]

[ext_resource type="Script" path="res://pause_menu.gd" id="1_825b4"]

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 2
layer = 2
script = ExtResource("1_825b4")

[node name="Panel" type="Panel" parent="."]
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.494
anchor_right = 0.5
anchor_bottom = 0.494
offset_left = -128.0
offset_top = -160.112
offset_right = 128.0
offset_bottom = 159.888
grow_horizontal = 2
grow_vertical = 2

[node name="ExitButton" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 40.0
offset_top = 256.0
offset_right = 216.0
offset_bottom = 288.0
text = "Exit to Main Menu"

[node name="ResumeButton" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 40.0
offset_top = 32.0
offset_right = 216.0
offset_bottom = 64.0
text = "Resume"

[node name="OptionButton" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 40.0
offset_top = 144.0
offset_right = 216.0
offset_bottom = 176.0
text = "Options"

[node name="QuitConfirmation" type="ConfirmationDialog" parent="Panel"]
title = "Confirm exit"
initial_position = 1
size = Vector2i(273, 106)
borderless = true
always_on_top = true
ok_button_text = "Confirm"
dialog_text = "Are you sure you want to exit? 
Any unsaved progress will be lost"

[connection signal="pressed" from="Panel/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="Panel/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="Panel/OptionButton" to="." method="_on_option_button_pressed"]
[connection signal="canceled" from="Panel/QuitConfirmation" to="." method="_on_quit_confirmation_canceled"]
[connection signal="confirmed" from="Panel/QuitConfirmation" to="." method="_on_quit_confirmation_confirmed"]
